--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@heroicons/react": "^2.2.0",
         "@hookform/resolvers": "^5.2.2",
+        "@tanstack/react-query": "^5.90.11",
         "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
         "react-chartjs-2": "^5.3.1",
