--- a/child-case-management/.env
+++ b/child-case-management/.env
@@ -1,3 +1,2 @@
-REACT_APP_API_URL=http://localhost:8000/api
-REACT_APP_SITE_NAME=Child Case Management System
-REACT_APP_ENV=development
+VITE_API_URL=https://localhost:5000/api
+VITE_OTHER_KEY=12345
