--- a/child-case-management/package.json
+++ b/child-case-management/package.json
@@ -1,54 +1,52 @@
 {
   "name": "child-case-management",
-  "version": "1.0.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.19",
-    "@mui/x-data-grid": "^6.19.8",
-    "@mui/x-date-pickers": "^6.19.8",
-    "axios": "^1.6.8",
-    "date-fns": "^2.30.0",
-    "formik": "^2.4.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@mui/x-data-grid": "^8.21.0",
+    "@mui/x-date-pickers": "^8.21.0",
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.9",
     "jwt-decode": "^4.0.0",
-    "react": "18.2.0",
-    "react-csv": "2.2.2",
-    "react-dom": "18.2.0",
-    "react-helmet-async": "^2.0.4",
-    "react-hook-form": "^7.49.3",
-    "react-hot-toast": "^2.4.1",
+    "react": "^18.2.0",
+    "react-csv": "^2.2.2",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.68.0",
+    "react-hot-toast": "^2.6.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.20.1",
-    "recharts": "^2.10.3",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.3.2"
+    "react-router-dom": "^7.10.1",
+    "recharts": "^3.5.1",
+    "web-vitals": "^5.1.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.1.3",
-    "@testing-library/react": "14.0.0",
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.24",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "3.3.2"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
+    "vite": "^7.2.4"
   }
 }
