--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
+    "framer-motion": "^12.23.25",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
